--- a/newsapp/templates/index.html
+++ b/newsapp/templates/index.html
@@ -1,245 +1,33 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!DOCTYPE html>
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Flash | Pocket-Friendly News</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Your News Easy to Access Partner" />
-	<meta name="keywords" content="news, flash, headlines, cast, breaking-news" />
-  <meta name="author" content="Shivansh Srivastava" />
-  
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-	<link rel="shortcut icon" href="favicon.ico">
-	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic|Roboto:400,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="../static/css/style.css">    
-  <link rel="stylesheet" href="../static/css/animate.css">
-	<link rel="stylesheet" href="../static/css/icomoon.css">
-	<link rel="stylesheet" href="../static/css/bootstrap.css">
-	<script src="../static/js/modernizr-2.6.2.min.js"></script>
+	<style>
+	.card{
+		float: left;
+	}
+	</style>
 
-	</head>
-	<body>
-	<div id="fh5co-offcanvas">
-		<a href="#" class="fh5co-close-offcanvas js-fh5co-close-offcanvas"><span><i class="icon-cross3"></i> <span>Close</span></span></a>
-		<div class="fh5co-bio">
-			<figure>
-				<img src="images/person1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-			</figure>
-			<h3 class="heading">About Me</h3>
-			<h2>Emily Tran Le</h2>
-			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-			<ul class="fh5co-social">
-				<li><a href="#"><i class="icon-twitter"></i></a></li>
-				<li><a href="#"><i class="icon-facebook"></i></a></li>
-				<li><a href="#"><i class="icon-instagram"></i></a></li>
-			</ul>
+    <title>Flash | Pocket-Friendly News Partner</title>
+  </head>
+  <body>
+	{% for new, des, i in mylist %}
+	<div class="card" style="width: 18rem;">
+		<img class="card-img-top" src="{{ i }}" alt="Breaking News">
+		<div class="card-body">
+		  <h5 class="card-title">{{ new }}</h5>
+		  <p class="card-text">{{ des }}</p>
+		  <a href="#" class="btn btn-primary">More</a>
 		</div>
-
-		<div class="fh5co-menu">
-			<div class="fh5co-box">
-				<h3 class="heading">Categories</h3>
-				<ul>
-					<li><a href="#">Travel</a></li>
-					<li><a href="#">Style</a></li>
-					<li><a href="#">Photography</a></li>
-					<li><a href="#">Food &amp; Drinks</a></li>
-					<li><a href="#">Culture</a></li>
-				</ul>
-			</div>
-			<div class="fh5co-box">
-				<h3 class="heading">Search</h3>
-				<form action="#">
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Type a keyword">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-	<header id="fh5co-header">
-		
-		<div class="container-fluid">
-
-			<div class="row">
-				<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-				<ul class="fh5co-social">
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-				</ul>
-				<div class="col-lg-12 col-md-12 text-center">
-					<h1 id="fh5co-logo"><a href="index.html">Magazine <sup>TM</sup></a></h1>
-				</div>
-
-			</div>
-		
-		</div>
-
-	</header>
-	<div class="container-fluid">
-		<div class="row fh5co-post-entry">
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_1.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Food &amp; Drink</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">We Eat and Drink All Night</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_2.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Food &amp; Drink</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">Beef Steak at Guatian Restaurant</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-xs-block"></div>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_3.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">An Overlooking River at the East Cost</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_4.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">A Wildlife In The Mountain of India</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-lg-block visible-md-block visible-sm-block visible-xs-block"></div>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_5.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Photography</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">We Took A Photo</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_6.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">A Modernize Huge and Beautiful Building</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-xs-block"></div>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_7.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Food &amp; Drinks</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">Enjoying the Native Juice Drink in Brazil</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_8.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">Boat Travel in The Vietnam River</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-lg-block visible-md-block visible-sm-block visible-xs-block"></div>
-
-
-
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_1.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Food &amp; Drink</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">We Eat and Drink All Night</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_2.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Food &amp; Drink</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">Beef Steak at Guatian Restaurant</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-xs-block"></div>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_3.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">An Overlooking River at the East Cost</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_4.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">A Wildlife In The Mountain of India</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-lg-block visible-md-block visible-sm-block visible-xs-block"></div>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_5.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Photography</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">We Took A Photo</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_6.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">A Modernize Huge and Beautiful Building</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-xs-block"></div>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_7.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Food &amp; Drinks</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">Enjoying the Native Juice Drink in Brazil</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
-				<figure>
-					<a href="single.html"><img src="images/pic_8.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
-				<span class="fh5co-meta"><a href="single.html">Travel</a>, <a href="single.html">Style</a></span>
-				<h2 class="fh5co-article-title"><a href="single.html">Boat Travel in The Vietnam River</a></h2>
-				<span class="fh5co-meta fh5co-date">March 6th, 2016</span>
-			</article>
-			<div class="clearfix visible-xs-block"></div>
-		</div>
-	</div>
-
-	<footer id="fh5co-footer">
-		<p><small>&copy; 2016. Magazine Free HTML5. All Rights Reserverd. <br> Designed by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a>  Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-	</footer>
-
-	<script src="../static/js/jquery.min.js"></script>
-	<script src="../static/js/jquery.easing.1.3.js"></script>
-	<script src="../static/js/bootstrap.min.js"></script>
-	<script src="../static/js/jquery.waypoints.min.js"></script>
-	<script src="../static/js/main.js"></script>
-
-	</body>
+	  </div>
+	  {{ value|linebreaks }}
+	  {% endfor %}
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
-9868408580
